[1] - Repository layout [2] - Align POM for Moka Core on new repository layout
Change-Id: I51c8e72240f1fc2838dbffe739c6a244aacadbf7
Signed-off-by: jeremie.tatibouet <jeremie.tatibouet@cea.fr>